--- a/docs/sphinx/user-guide/release-notes/2.4.x.rst
+++ b/docs/sphinx/user-guide/release-notes/2.4.x.rst
@@ -56,6 +56,11 @@ You can see the complete list of bugs that were
 Upgrade Instructions for 2.3.x --> 2.4.0
 ----------------------------------------
 
+Pulp 2.4 introduces new client library dependencies if you are using Qpid as your message broker.
+Ensure you have the necessary dependencies installed by running::
+
+    $ sudo yum install python-qpid-qmf python-qpid
+
 To upgrade to the new Pulp release from version 2.3.x, you should begin by using yum to install the
 latest RPMs from the Pulp repository and run the database migrations::
 
