--- a/docs/sphinx/user-guide/release-notes/2.4.x.rst
+++ b/docs/sphinx/user-guide/release-notes/2.4.x.rst
@@ -29,6 +29,9 @@ New Features
    commented and set to the default values. Due to this, the OAuth key and secret fields are no
    longer automatically populated and users will need to provide these values when they wish to
    configure Pulp installations to use OAuth. OAuth is now disabled by default.
+#. Pulp has tightened the security in version 2.4.0 by adding a functionality to validate server
+   SSL cert against the trusted CA cert. More information about these certificates generated
+   at install time can be found in the :ref:`Installation Guide <ssl_validation>`.
 
 Deprecation
 -----------
@@ -123,6 +126,15 @@ optionally edit the new ``log_level`` setting in the ``[server]`` section of
 
     $ sudo rm -rf /etc/pulp/logging/
     $ sudo $EDITOR /etc/pulp/server.conf
+
+Pulp 2.4.0 has an added functionality to validate server SSL cert against the trusted CA cert.
+To take advantage of it, you can run ``pulp-gen-ca-certificate`` to generate CA as well as SSl cert
+and respective private keys. You can also generate and use your own certificates and configure them
+under the [security] section in ``/etc/pulp/server.conf``. More information can be found in the
+:ref:`Installation Guide <ssl_validation>`. After generating these certificates, you will also need to
+copy and add the CA cert to the trusted CA certs on the consumers and hosts running pulp-admin install.
+For pulp-admin, you can follow instructions located at :ref:`Installation Guide <admin_trusted_ca_installtion>`
+and for consumers, you can refer to :ref:`Installation Guide <consumer_trusted_ca_installtion>`.
 
 Pulp 2.4.0 comes with some new services that perform distributed tasks using Celery. You can read
 about this more in the :ref:`Installation Guide <distributed_workers_installation>`. You will need
