--- a/docs/sphinx/user-guide/release-notes/2.4.x.rst
+++ b/docs/sphinx/user-guide/release-notes/2.4.x.rst
@@ -30,8 +30,8 @@ New Features
    longer automatically populated and users will need to provide these values when they wish to
    configure Pulp installations to use OAuth. OAuth is now disabled by default.
 #. Pulp has tightened the security in version 2.4.0 by adding functionality to validate the server
-   SSL cert against the trusted CA cert. More information about these certificates generated
-   at the install time can be found in the :ref:`Installation Guide <ssl_validation>`.
+   SSL certificate against the trusted CA certificate. More information about these certificates
+   generated at the install time can be found in the :ref:`Installation Guide <ssl_validation>`.
 
 Deprecation
 -----------
@@ -127,15 +127,16 @@ optionally edit the new ``log_level`` setting in the ``[server]`` section of
     $ sudo rm -rf /etc/pulp/logging/
     $ sudo $EDITOR /etc/pulp/server.conf
 
-Pulp 2.4.0 has an added functionality to validate the server SSL cert against trusted CA certs.
-To take advantage of it, you can run ``pulp-gen-ca-certificate`` to generate a CA cert, SSL cert
-and respective private keys. You can also generate and use your own certificates and configure them
-under the [security] section in ``/etc/pulp/server.conf``. More information can be found in the
-:ref:`Installation Guide <ssl_validation>`. After generating these certificates and restarting apache,
-you will need to copy and add the CA cert to the trusted CA certs on the consumers and hosts
-running pulp-admin install. For pulp-admin, you can follow instructions located at
-:ref:`Installation Guide <admin_trusted_ca_installtion>`. For consumers, you can refer to
-:ref:`Installation Guide <consumer_trusted_ca_installtion>`.
+Pulp 2.4.0 has an added functionality to validate the server SSL certificate against
+trusted CA certificates. To take advantage of it, you can run ``pulp-gen-ca-certificate``
+to generate a CA certificate, SSL certificate and respective private keys. You can also generate
+and use your own certificates and configure them under the [security] section in
+``/etc/pulp/server.conf``. More information can be found in the
+:ref:`Installation Guide <ssl_validation>`. After generating these certificates and restarting
+apache, you will need to copy and add the CA certificate to the trusted CA certificates
+on the consumers and hosts running pulp-admin install. For pulp-admin, you can follow instructions
+located at :ref:`Installation Guide <admin_trusted_ca_installtion>`. For consumers, you can
+refer to :ref:`Installation Guide <consumer_trusted_ca_installtion>`.
 
 Pulp 2.4.0 comes with some new services that perform distributed tasks using Celery. You can read
 about this more in the :ref:`Installation Guide <distributed_workers_installation>`. You will need
