--- a/docs/sphinx/user-guide/release-notes/2.4.x.rst
+++ b/docs/sphinx/user-guide/release-notes/2.4.x.rst
@@ -137,7 +137,9 @@ and use your own certificates and configure them under the [security] section in
 apache, you will need to copy and add the CA certificate to the trusted CA certificates
 on the consumers and hosts running pulp-admin install. For pulp-admin, you can follow instructions
 located at :ref:`Installation Guide <admin_trusted_ca_installtion>`. For consumers, you can
-refer to :ref:`Installation Guide <consumer_trusted_ca_installtion>`.
+refer to :ref:`Installation Guide <consumer_trusted_ca_installtion>`. You can also take a look
+at :ref:`Troubleshooting guide <troubleshooting_ssl_issues>` if you run into any certificate
+verification issues.
 
 Pulp 2.4.0 comes with some new services that perform distributed tasks using Celery. You can read
 about this more in the :ref:`Installation Guide <distributed_workers_installation>`. You will need
