splitting ssl cert generation script from ca cert generation script and updating docs accordingly

--- a/docs/sphinx/user-guide/release-notes/2.4.x.rst
+++ b/docs/sphinx/user-guide/release-notes/2.4.x.rst
@@ -127,16 +127,23 @@ optionally edit the new ``log_level`` setting in the ``[server]`` section of
     $ sudo rm -rf /etc/pulp/logging/
     $ sudo $EDITOR /etc/pulp/server.conf
 
+
 Pulp 2.4.0 has an added functionality to validate the server SSL certificate against
-trusted CA certificates. To take advantage of it, you can run ``pulp-gen-ca-certificate``
-to generate a CA certificate, SSL certificate and respective private keys. You can also generate
-and use your own certificates and configure them under the [security] section in
-``/etc/pulp/server.conf``. More information can be found in the
-:ref:`Installation Guide <ssl_validation>`. After generating these certificates and restarting
-apache, you will need to copy and add the CA certificate to the trusted CA certificates
-on the consumers and hosts running pulp-admin install. For pulp-admin, you can follow instructions
-located at :ref:`Installation Guide <admin_trusted_ca_installtion>`. For consumers, you can
+trusted CA certificates. To take advantage of it, you can run ``pulp-gen-ssl-certificate``
+to generate private key and SSL certificate signed by Pulp CA certificate. If you want to
+regenerate your Pulp CA certificate, you can do so by running ``pulp-gen-ca-certificate``
+before generating SSL certificate. You can also opt to not use these script and generate
+your own certificates. You will just need to configure them under the [security] section in
+``/etc/pulp/server.conf``. You will need to restart httpd after generating new certificates
+or changing the security configuation. More information can be found in the
+:ref:`Installation Guide <ssl_validation>`.
+
+If you end up replacing or generating new CA certificate above, you will need to copy and
+add the CA certificate to the trusted CA certificates on the consumers and hosts
+running pulp-admin install. For pulp-admin, you can follow instructions located at
+:ref:`Installation Guide <admin_trusted_ca_installtion>`. For consumers, you can
 refer to :ref:`Installation Guide <consumer_trusted_ca_installtion>`.
+
 
 Pulp 2.4.0 comes with some new services that perform distributed tasks using Celery. You can read
 about this more in the :ref:`Installation Guide <distributed_workers_installation>`. You will need
