--- a/docs/sphinx/user-guide/release-notes/2.4.x.rst
+++ b/docs/sphinx/user-guide/release-notes/2.4.x.rst
@@ -2,6 +2,35 @@
 Pulp 2.4 Release Notes
 ======================
 
+Pulp 2.4.1
+==========
+
+Bugs
+----
+You can see the complete list of bugs that were
+`fixed in Pulp 2.4.1 <https://bugzilla.redhat.com/buglist.cgi?list_id=1242840&resolution=---&resolution=CURRENTRELEASE&classification=Community&target_release=2.4.0&query_format=advanced&bug_status=VERIFIED&bug_status=CLOSED&component=admin-client&component=bindings&component=consumer-client%2Fagent&component=consumers&component=coordinator&component=documentation&component=events&component=nodes&component=okaara&component=rel-eng&component=repositories&component=rest-api&component=selinux&component=upgrade&component=users&component=z_other&product=Pulp>`_.
+
+
+Rest API Changes
+----------------
+
+* The timestamps returned for the following objects and fields have been converted from an
+  ISO 8601 timestamp with a timezone offset to native ISO 8601 timestamps in UTC
+
+  #. Repository Distributor (last_published)
+  #. Repository Group Distributor (last_published)
+  #. Repository Publish Results (started, completed)
+  #. Repository Group Publish Results (started, completed)
+  #. Repository Importer (last_sync)
+  #. Repository Importer Sync Results (started, completed)
+
+Deprecation
+-----------
+
+- The 2.4.1 release deprecates the ``operation_retries`` setting from ``/etc/pulp/server.conf``.
+  All Pulp services now attempt to re-connect to the MongoDB indefinitely.
+
+
 Pulp 2.4.0
 ==========
 
@@ -405,20 +434,3 @@ If you are a plugin author, these changes are relevant to you:
   we no longer had a need for those extra arguments, so each call now receives only the Importer or
   Distributor instance (self). If you have written an Importer or a Distributor, you will need to
   adjust your method signatures accordingly in order to work with this release of Pulp.
-
-
-Pulp 2.4.1
-==========
-
-Rest API Changes
-----------------
-
-* The timestamps returned for the following objects and fields have been converted from an
-  ISO 8601 timestamp with a timezone offset to native ISO 8601 timestamps in UTC
-
-  #. Repository Distributor (last_published)
-  #. Repository Group Distributor (last_published)
-  #. Repository Publish Results (started, completed)
-  #. Repository Group Publish Results (started, completed)
-  #. Repository Importer (last_sync)
-  #. Repository Importer Sync Results (started, completed)
