--- a/AUTHORS
+++ b/AUTHORS
@@ -31,3 +31,4 @@ James Slagle (jslagle@redhat.com)
 Chris St. Pierre (chris.a.st.pierre@gmail.com)
 Adam Young (ayoung@redhat.com)
 Lukas Zapletal (lzap+git@redhat.com)
+Irina Gulina (irina.a.gulina@gmail.com)
