--- a/docs/sphinx/user-guide/release-notes/2.4.x.rst
+++ b/docs/sphinx/user-guide/release-notes/2.4.x.rst
@@ -115,6 +115,10 @@ Known Issues
   select at least one package group during the installation. Automated kickstarts are not affected by
   this issue.
 
+* There is a `configuration bug <https://bugzilla.redhat.com/show_bug.cgi?id=1132609>`_ related to
+  using Mongo DB with authenticated database users. The error presents itself during syncs and other
+  task-related operations. A workaround is documented in comment #1 of the bug.
+
 * ``/etc/pulp/admin/admin.conf`` is owned by a different RPM than it was in 2.3.x. This means that
   when you upgrade Pulp, you will not get an admin.conf.rpmnew file. Instead, admin.conf will be
   overwritten with the new stock version.
