--- a/docs/sphinx/user-guide/release-notes/2.4.x.rst
+++ b/docs/sphinx/user-guide/release-notes/2.4.x.rst
@@ -2,6 +2,17 @@
 Pulp 2.4 Release Notes
 ======================
 
+Pulp 2.4.2
+==========
+
+Rest API Changes
+----------------
+
+* Certain API calls under ``/consumers/`` related to repo binding would
+  `erroneously return full task information <https://bugzilla.redhat.com/show_bug.cgi?id=1130119>`_.
+  This has been corrected; these calls now only return the task's ID.
+
+
 Pulp 2.4.1
 ==========
 
