1124589 - python-kombu does not work with Qpid unless the user adjusts qpidd.conf
This update to pulp's python-kombu allows use of the ANONYMOUS sasl_mechanism,
which works "out of the box" with qpidd. Users will no longer have to edit
their `qpidd.conf` file as one of the installation steps.

Note that some other kombu refactoring updates are included with this patch.
However there should be no difference in functionality aside from the
aforementioned sasl_mechanism change.

--- a/docs/sphinx/user-guide/release-notes/2.5.x.rst
+++ b/docs/sphinx/user-guide/release-notes/2.5.x.rst
@@ -2,6 +2,17 @@
 Pulp 2.5 Release Notes
 =========================
 
+Pulp 2.5.1
+===========
+
+New Features
+------------
+
+- Pulp no longer requires additional configuration of Qpid after installation.
+  It now works with the ANONYMOUS authentication mechanism. Users can still use a
+  username/password however if they set up a SASL database as described in the
+  installation document.
+
 Pulp 2.5.0
 ===========
 
