1158138, 1113629 - Allow '.' in logins, permissions

--- a/AUTHORS
+++ b/AUTHORS
@@ -8,6 +8,7 @@ Dominic Cleal (dcleal@redhat.com)
 Jeremy Cline (jcline@redhat.com)
 Jason L Connor (jconnor@redhat.com)
 Barnaby Court (bcourt@redhat.com)
+Patrick Creech (pcreech17@gmail.com)
 Michael DeHaan (mdehaan@redhat.com)
 Jay Dobies (jason.dobies@redhat.com)
 Máirín Duffy (duffy@redhat.com)
