Explicitly prompt user when disabling SELinux using dev-setup script.

--- a/AUTHORS
+++ b/AUTHORS
@@ -24,6 +24,7 @@ Og B. Maciel (ogmaciel@gnome.org)
 John Matthews (jmatthews@redhat.com)
 Mike McCune (mmccune@redhat.com)
 Jeff Ortel (jortel@redhat.com)
+Ina Panova (ipanova@redhat.com)
 Dan Radez (dradez@redhat.com)
 Jason E. Rist (jrist@redhat.com)
 Jesus M. Rodriguez (jesusr@redhat.com)
