1155513 - Search for package in all consumers

--- a/AUTHORS
+++ b/AUTHORS
@@ -12,6 +12,7 @@ Michael DeHaan (mdehaan@redhat.com)
 Jay Dobies (jason.dobies@redhat.com)
 Máirín Duffy (duffy@redhat.com)
 David Gao (dgao@redhat.com)
+Andrea Giardini (contact@andreagiardini.com)
 Devan Goodwin (dgoodwin@dangerouslyinc.com)
 Irina Gulina (irina.a.gulina@gmail.com)
 Wes Hayutin (whayutin@redhat.com)
