--- a/docs/user-guide/release-notes/2.4.x.rst
+++ b/docs/user-guide/release-notes/2.4.x.rst
@@ -12,7 +12,7 @@ POODLE attack.
 Bugs
 ----
 You can see the complete list of bugs that were
-`fixed in Pulp 2.4.3 <https://bugzilla.redhat.com/buglist.cgi?bug_status=VERIFIED&bug_status=RELEASE_PENDING&bug_status=CLOSED&classification=Community&component=API%2Fintegration&component=async%2Ftasks&component=consumers&component=documentation&component=nodes&component=rel-eng&component=user-experience&component=z_other&list_id=2768089&product=Pulp&query_format=advanced&target_release=2.4.3>`_.
+:fixedbugs:`fixed in Pulp 2.4.3 <2.4.3>`.
 
 Upgrade Instructions for 2.4.2 --> 2.4.3
 ----------------------------------------
@@ -49,7 +49,7 @@ Rest API Changes
 ----------------
 
 * Certain API calls under ``/consumers/`` related to repo binding would
-  `erroneously return full task information <https://bugzilla.redhat.com/show_bug.cgi?id=1130119>`_.
+  :bz:`erroneously return full task information <1130119>`.
   This has been corrected; these calls now only return the task's ID.
 
 Upgrade Instructions for 2.4.1 --> 2.4.2
@@ -68,7 +68,7 @@ Pulp 2.4.1
 Bugs
 ----
 You can see the complete list of bugs that were
-`fixed in Pulp 2.4.1 <https://bugzilla.redhat.com/buglist.cgi?bug_status=VERIFIED&bug_status=RELEASE_PENDING&bug_status=CLOSED&classification=Community&component=API%2Fintegration&component=async%2Ftasks&component=consumers&component=documentation&component=nodes&component=rel-eng&component=user-experience&component=z_other&list_id=2768089&product=Pulp&query_format=advanced&target_release=2.4.1>`_.
+:fixedbugs:`fixed in Pulp 2.4.1 <2.4.1>`.
 
 Backwards Incompatible Changes
 ------------------------------
@@ -196,12 +196,12 @@ Agent Changes
 Bugs
 ----
 You can see the complete list of bugs that were
-`fixed in Pulp 2.4.0 <https://bugzilla.redhat.com/buglist.cgi?list_id=1242840&resolution=---&resolution=CURRENTRELEASE&classification=Community&target_release=2.4.0&query_format=advanced&bug_status=VERIFIED&bug_status=CLOSED&component=admin-client&component=bindings&component=consumer-client%2Fagent&component=consumers&component=coordinator&component=documentation&component=events&component=nodes&component=okaara&component=rel-eng&component=repositories&component=rest-api&component=selinux&component=upgrade&component=users&component=z_other&product=Pulp>`_.
+:bz:`fixed in Pulp 2.4.0 <2.4.0>`.
 
 Known Issues
 ------------
 
-* There was `one regression <https://bugzilla.redhat.com/show_bug.cgi?id=1128292>`_ discovered during
+* There was :bz:`one regression <1128292>` discovered during
   the 2.4.0 QE cycle that has not been resolved as of the release. The 2.4.0 distributor publishes
   groups in a slightly different way than Anaconda expects during interactive kickstarting. This
   causes no groups to be chosen by default during the package group selection installation step. The
@@ -209,7 +209,7 @@ Known Issues
   select at least one package group during the installation. Automated kickstarts are not affected by
   this issue.
 
-* There is a `configuration bug <https://bugzilla.redhat.com/show_bug.cgi?id=1132609>`_ related to
+* There is a :bz:`configuration bug <1132609>` related to
   using MongoDB with authenticated database users. The error presents itself during syncs and other
   task-related operations. A workaround is documented in comment #1 of the bug.
 
