--- a/docs/user-guide/release-notes/2.1.x.rst
+++ b/docs/user-guide/release-notes/2.1.x.rst
@@ -18,10 +18,10 @@ that contain a lot of metadata.
 Notable Bugs
 ------------
 
-`928087 <https://bugzilla.redhat.com/show_bug.cgi?id=928087>`_ - pickling error in pulp.log when cancelling sync
+:bz:`928087` - pickling error in pulp.log when cancelling sync
 tasks
 
-`949186 <https://bugzilla.redhat.com/show_bug.cgi?id=949186>`_ - The pycurl downloader times out on active
+:bz:`949186` - The pycurl downloader times out on active
 downloads, even during very good transfer rates
 
 All Bugs
@@ -68,27 +68,27 @@ Client Changes
 Noteworthy Bugs Fixed
 ---------------------
 
-`872724 <https://bugzilla.redhat.com/show_bug.cgi?id=872724>`_ - Requesting package profile on consumer without
+:bz:`872724` - Requesting package profile on consumer without
 a package profile results in error
 
-`878234 <https://bugzilla.redhat.com/show_bug.cgi?id=878234>`_ - Consumer group package_install, update and
+:bz:`878234` - Consumer group package_install, update and
 uninstall not returning correct result
 
-`916794 <https://bugzilla.redhat.com/show_bug.cgi?id=916794>`_ - pulp-admin orphan list, Performance & Memory
+:bz:`916794` - pulp-admin orphan list, Performance & Memory
 concerns (~17 minutes and consuming consuming ~1.65GB memory). The --summary flag was removed and summary
 behavior was made the default when listing orphans. A new --details flag has been added to get the previous
 behavior.
 
-`918160 <https://bugzilla.redhat.com/show_bug.cgi?id=918160>`_ - Orphan list --summary mode isn't a summary.
+:bz:`918160` - Orphan list --summary mode isn't a summary.
 Listing orphans now returns a much smaller set of related fields (namely only the unit keys).
 
-`920792 <https://bugzilla.redhat.com/show_bug.cgi?id=920792>`_ - High memory usage (growth of 2GB) from orphan
+:bz:`920792` - High memory usage (growth of 2GB) from orphan
 remove --all. All server-side orphan operations now use generators instead of database batch queries.
 
 RFE Bugs
 --------
 
-`876725 <https://bugzilla.redhat.com/show_bug.cgi?id=876725>`_ - RFE - consumer/agent - support option to
+:bz:`876725` - RFE - consumer/agent - support option to
 perform 'best effort' install of content. We will now avoid aborting an install when one of the packages is not
 available for installation.
 
