--- a/docs/user-guide/release-notes/2.6.x.rst
+++ b/docs/user-guide/release-notes/2.6.x.rst
@@ -11,12 +11,16 @@ New Features
 - Pulp now supports `RabbitMQ`_ as its task message broker. See the inline comments in
   ``/etc/pulp/server.conf`` for instruction on configuring Pulp to use RabbitMQ.
 
-.. _RabbitMQ: https://www.rabbitmq.com/
+- Pulp now allows user credentials to be read from user's ``~/.pulp/admin.conf``.
+  This should allow pulp-admin to be automated more easily and more securely.
+  Please see our :ref:`Authentication` documentation for details.
 
 - Pulp no longer requires additional configuration of Qpid after installation.
   It now works with the ANONYMOUS authentication mechanism. Users can still use a
   username/password however if they set up a SASL database as described in the
   installation document.
+
+.. _RabbitMQ: https://www.rabbitmq.com/
 
 Deprecation
 -----------
