--- a/docs/sphinx/user-guide/release-notes/2.5.x.rst
+++ b/docs/sphinx/user-guide/release-notes/2.5.x.rst
@@ -10,8 +10,8 @@ New Features
 
 - pulp-admin now has a bash tab completion script.
 
-- A new selinux policy that confines the pulp_workers, pulp_celerybeat, and
-  pulp_resource_manager
+- A new selinux policy is introduced which confines the `pulp_workers`, `pulp_celerybeat`, and
+  `pulp_resource_manager` processes.
 
 - Pulp 2.5.0 works with `pulp_docker`, an optional plugin to manage Docker
   repositories. In Pulp 2.5.0 this optional plugin is considered "tech preview"
