--- a/docs/sphinx/user-guide/release-notes/2.5.x.rst
+++ b/docs/sphinx/user-guide/release-notes/2.5.x.rst
@@ -17,7 +17,7 @@ New Features
   repositories. In Pulp 2.5.0 this optional plugin is considered "tech preview"
   and did not undergo the same level of testing as other plugins. Please
   refer to the
-  `pulp_docker documentation <https://github.com/pulp/pulp_docker/tree/master/docs/user-guide>`_
+  `pulp_docker documentation <http://pulp-docker.readthedocs.org/en/latest/>`_
   for usage information.
 
 - Pulp now supports SSL on its connection to MongoDB. It is strongly recommended that you
