--- a/docs/sphinx/user-guide/release-notes/2.5.x.rst
+++ b/docs/sphinx/user-guide/release-notes/2.5.x.rst
@@ -53,6 +53,12 @@ Upgrade Instructions for 2.4.x --> 2.5.0
 For all systems that have Pulp software installed, perform a system update::
 
     $ sudo yum update
+    
+Run the pulp-manage-db script as the apache user::
+
+    $ sudo -u apache pulp-manage-db
+    
+Restart the pulp services and apache
 
 Thank You
 ---------
