Added release notes for 2.5.2

--- a/docs/sphinx/user-guide/release-notes/2.5.x.rst
+++ b/docs/sphinx/user-guide/release-notes/2.5.x.rst
@@ -2,6 +2,11 @@
 Pulp 2.5 Release Notes
 ======================
 
+Pulp 2.5.2
+==========
+This release fixes `#1179463 <https://bugzilla.redhat.com/show_bug.cgi?id=1179463>`_.
+
+
 Pulp 2.5.1
 ==========
 This is a an important bugfix release that contains the fix for
