Updated the release notes to include database migration instructions.

--- a/docs/sphinx/user-guide/release-notes/2.5.x.rst
+++ b/docs/sphinx/user-guide/release-notes/2.5.x.rst
@@ -4,7 +4,24 @@ Pulp 2.5 Release Notes
 
 Pulp 2.5.2
 ==========
-This release fixes `#1179463 <https://bugzilla.redhat.com/show_bug.cgi?id=1179463>`_.
+This release fixes `#1179463 <https://bugzilla.redhat.com/show_bug.cgi?id=1179463>`_,
+ `#1178920 <https://bugzilla.redhat.com/show_bug.cgi?id=1178920>`_,
+ `#1171278 <https://bugzilla.redhat.com/show_bug.cgi?id=1171278>`_ and
+ `#1159040 <https://bugzilla.redhat.com/show_bug.cgi?id=1159040>`_.
+
+To upgrade, shut down all Pulp services::
+
+    $ for s in {goferd,pulp_celerybeat,pulp_resource_manager,pulp_workers,httpd}; do sudo systemctl stop $s; done;
+
+Next, update the packages::
+
+    $ sudo yum update
+ 
+Run the pulp-manage-db script as the apache user::
+
+    $ sudo -u apache pulp-manage-db
+
+Restart the pulp services and apache
 
 
 Pulp 2.5.1
