Emit event notifications when TaskStatus is saved or updated.
This patch adds new functionality to emit event notifications when TaskStatus
objects are changed. This relies on mongoengine's ``signals`` library; when a
TaskStatus is updated we publish a message. We override ``CriteriaQuerySet``'s
``update()`` method as well to send a message upon updating a collection of
TaskStatuses.

re #87

--- a/docs/user-guide/release-notes/2.7.x.rst
+++ b/docs/user-guide/release-notes/2.7.x.rst
@@ -11,3 +11,5 @@ New Features
 - The repo authentication functionality previously associated with pulp_rpm has
   been moved to platform. This makes it available for other plugins to use.
 
+- A new event notification framework is available. Please see
+  :ref:`the developer documentation <event>` for more detail.
