add thank you note for new contributors
to find the contributors:

```bash
diff <(git shortlog origin/2.5-release origin/2.6-testing -s | cut -f2) \
     <( git shortlog origin/2.5-release -s | cut -f2) \
     --unchanged-group-format='' --changed-group-format='%<'
```

--- a/docs/user-guide/release-notes/2.6.x.rst
+++ b/docs/user-guide/release-notes/2.6.x.rst
@@ -137,3 +137,15 @@ Plugin API Changes
      * Assume that plugin code which is supposed to run later may not run.
 
      * Assume that the previous executions of plugin code may not have run to completion.
+
+Thank You
+---------
+
+Thank you to all of Pulp's contributors, especially these new ones!
+
+- Andrea Giardini
+- Andreas Schieb
+- Ina Panova
+- Michael Moll
+- Patrick Creech
+- Vijaykumar Jain
