792 - Added instructions to migrate db

--- a/docs/user-guide/release-notes/2.6.x.rst
+++ b/docs/user-guide/release-notes/2.6.x.rst
@@ -77,7 +77,13 @@ After all tasks have been canceled upgrade the packages using:
 
     sudo yum update
 
-After yum completes you should restart `httpd`, `pulp_workers`, `pulp_celerybeat`, and
+After yum completes you should migrate the database using:
+
+::
+
+    sudo -u apache pulp-manage-db
+
+After the database migrations finish, restart `httpd`, `pulp_workers`, `pulp_celerybeat`, and
 `pulp_resource_manager`.
 
 Bugs
